central-bundle/monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
    app: monitoring
  annotations:
    owner: stackrox
    email: support@stackrox.com
spec:
  replicas: 1
  minReadySeconds: 15
  selector:
    matchLabels:
      app: monitoring
  template:
    metadata:
      namespace: stackrox
      labels:
        app.kubernetes.io/name: stackrox
        app: monitoring
    spec:
      
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 25
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/compute
                    operator: In
                    values:
                    - "true"
            - weight: 75
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/infra
                    operator: NotIn
                    values:
                    - "true"
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: NotIn
                    values:
                    - "true"
      serviceAccount: monitoring
      containers:
      - name: influxdb
        image: 10.3.62.83:5000/stackrox/monitoring:3.0.36.0
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "/influx-post-start.sh"]
        command:
        - /influxd
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 500Mi
          
        securityContext:
          capabilities:
            drop: ["NET_RAW"]
          readOnlyRootFilesystem: true
        volumeMounts:
          - name: influxdb-config-volume
            mountPath: /etc/influxdb/
            readOnly: true
          - name: monitoring-db
            mountPath: /var/lib/influxdb
      - name: telegraf-proxy
        image: 10.3.62.83:5000/stackrox/monitoring:3.0.36.0
        command:
        - /telegraf
        ports:
        - name: api
          containerPort: 443
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        securityContext:
          capabilities:
            drop: ["NET_RAW"]
          readOnlyRootFilesystem: true
        volumeMounts:
          - name: monitoring-db-volume
            mountPath: /run/secrets/stackrox.io/monitoring/certs/
            readOnly: true
          - name: telegraf-proxy-config-volume
            mountPath: /etc/telegraf
            readOnly: true
      - name: grafana
        image: 10.3.62.83:5000/stackrox/monitoring:3.0.36.0
        command:
        - /grafana-entrypoint.sh
        - /run.sh
        ports:
        - name: api
          containerPort: 3000
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        securityContext:
          capabilities:
            drop: ["NET_RAW"]
          readOnlyRootFilesystem: true
        volumeMounts:
          - name: grafana-config-volume
            mountPath: /etc/grafana
          - name: monitoring-ui-volume
            mountPath: /run/secrets/stackrox.io/monitoring/certs/
            readOnly: true
          - name: monitoring-password-volume
            mountPath: /run/secrets/stackrox.io/monitoring/secrets/
            readOnly: true
          - name: monitoring-db
            mountPath: /var/lib/grafana
      volumes:
      - name: grafana-config-volume
        emptyDir: {}
      - name: monitoring-db-volume
        secret:
          secretName: monitoring
          items:
            - key: monitoring-db-cert.pem
              path: cert.pem
            - key: monitoring-db-key.pem
              path: key.pem
            - key: monitoring-ca.pem
              path: ca.pem
      - name: monitoring-ui-volume
        secret:
          secretName: monitoring
          items:
            - key: monitoring-ui-cert.pem
              path: cert.pem
            - key: monitoring-ui-key.pem
              path: key.pem
      - name: monitoring-password-volume
        secret:
          secretName: monitoring
          items:
            - key: monitoring-password
              path: password
      - name: influxdb-config-volume
        configMap:
          name: influxdb
      - name: telegraf-proxy-config-volume
        configMap:
          name: telegraf-proxy
      - name: monitoring-db
        persistentVolumeClaim:
          claimName: monitoring-db
