central-bundle/monitoring/loadbalancer.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: monitoring-mtls
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
spec:
  host: monitoring.stackrox
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: monitoring
